force-app/main/default/objects/TimeCard__c/TimeCard__c.object-meta.xml
<CustomObject>
    <label>TimeCard</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>TimeCard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeCards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>