force-app/main/default/objects/TimeCard__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>enter date value / or fill it using timesheet lwc component</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>