force-app/main/default/objects/TimeCard__c/fields/TimeSheet_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeSheet_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeSheet Name</label>
    <referenceTo>TimeSheet__c</referenceTo>
    <relationshipLabel>TimeCards</relationshipLabel>
    <relationshipName>TimeCards</relationshipName>
    <type>Lookup</type>
</CustomField>