force-app/main/default/objects/TimeCard__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <label>User Story</label>
    <length>250</length>
    <type>Text</type>
</CustomField>