force-app/main/default/objects/TimeCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TimeSheet_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>